samples/_failures_safe/1761696039_20c8a8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_73cc80da.c: In function ‘main’:
./samples/SAFE/__tmp_73cc80da.c:131:5: error: expected expression at end of input
  131 |     if (
      |     ^~
./samples/SAFE/__tmp_73cc80da.c:131:5: error: expected declaration or statement at end of input
